fix(list-box): remove margin separating scrollbar when scrollbar is not present

--- a/packages/select/src/FilterMultiSelect/components/MultiSelectOption/MultiSelectOption.scss
+++ b/packages/select/src/FilterMultiSelect/components/MultiSelectOption/MultiSelectOption.scss
@@ -12,7 +12,6 @@
   grid-template-columns: $spacing-md 1fr auto;
   gap: $spacing-xs;
   padding: 0 $spacing-xs;
-  margin-right: $spacing-sm;
 
   font-family: $typography-paragraph-body-font-family;
   font-size: $typography-paragraph-body-font-size;
